--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,17 @@
   </head>
   <body>
     <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="{{ url("home") }}" class="brand-logo">Sleep Tracker</a>
+        {% macro navlinks() %}
+          <li><a href="{{ url("entries") }}">Entries</a></li>
+          <li><a href="{{ url("events") }}">Events</a></li>
+        {% endmacro %}
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Navbar Link</a></li>
+          {{ navlinks() }}
         </ul>
-
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="#">Navbar Link</a></li>
+          {{ navlinks() }}
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
