--- a/templates/event.html
+++ b/templates/event.html
@@ -2,4 +2,8 @@
 {% block content %}
 <h1>Event - {{ Event.timestamp|date("llll") }}</h1>
 <pre>{{ event|json(2) }}</pre>
+<form method="post">
+  <input type="hidden" name="action" value="delete">
+  <button class="btn" type="submit">Delete</button>
+</form>
 {% endblock %}
