--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,48 @@
 {% extends "base.html" %}
+{% block extracss %}
+{{ super() }}
+<style>
+.unlogged-events a {
+  cursor: pointer;
+}
+.unlogged-events a:hover {
+  text-decoration: underline;
+}
+</style>
+{% endblock %}
+
 {% block content %}
+{% if unloggedEvents|length %}
+<div class="row">
+  <ul class="col l6 offset-l3 m8 offset-m2 s12 collection with-header unlogged-events">
+    <li class="collection-header"><h5>Unlogged Events</h5></li>
+    {% for event in unloggedEvents %}
+    <li class="collection-item">
+      {{ event.date|date("dddd,  MMMM d, YYYY") }}
+      <a class="secondary-content" data-event-id="{{ event._id }}">
+        Create Entry
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+{% endif %}
+<form method="post" action="{{ url("entries") }}" id="actionForm">
+  <input type="hidden" name="action" value="createFromEvent">
+  <input type="hidden" name="eventId">
+</form>
+{% endblock %}
+
+{% block extrajs %}
+{{ super() }}
+<script>
+  document.querySelectorAll('.unlogged-events li a[data-event-id]').forEach(function(event) {
+    event.addEventListener('click', function() {
+      var form = document.getElementById('actionForm');
+      var eventId = form.querySelector('[name="eventId"]');
+      eventId.value = this.dataset.eventId;
+      form.submit();
+    });
+  });
+</script>
 {% endblock %}
