--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Sleep Log</title>
+    <style>
+      body {
+        margin-bottom: 20px;
+      }
+    </style>
     {% block extracss %}
     {% endblock %}
   </head>
