--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,37 @@
 .unlogged-events a:hover {
   text-decoration: underline;
 }
+.prev-period, .next-period {
+  cursor: pointer;
+}
+.controls {
+  display: flex;
+  justify-content: center;
+}
+.controls > * {
+  margin: 0 20px;
+}
+select.browser-default {
+  display: inline-block;
+  width: auto;
+}
 </style>
 {% endblock %}
 
 {% block content %}
 <canvas id="chart"></canvas>
+
+<div class="controls">
+  <a class="btn btn-flat prev-period"><i class="material-icons">fast_rewind</i></a>
+  <select class="browser-default period">
+    <option value="7" {% if periodDays == 7 %} selected{% endif %}>1 week</option>
+    <option value="14" {% if periodDays == 14 %} selected{% endif %}>2 weeks</option>
+    <option value="30" {% if periodDays == 30 %} selected{% endif %}>30 days</option>
+    <option value="60" {% if periodDays == 60 %} selected{% endif %}>60 days</option>
+    <option value="90" {% if periodDays == 90 %} selected{% endif %}>90 days</option>
+  </select>
+  <a class="btn btn-flat next-period"><i class="material-icons">fast_forward</i></a>
+</div>
 
 {% if unloggedDays|length %}
 <div class="row">
@@ -134,6 +160,10 @@
 </script>
 
 <script>
+  var urlParams = new URLSearchParams(window.location.search);
+  var startDate = new Date('{{ start }}');
+  var periodDays = {{ periodDays }};
+
   document.querySelectorAll('.unlogged-events .collection-item a').forEach(function(event) {
     event.addEventListener('click', function() {
       var form = document.getElementById('actionForm');
@@ -143,6 +173,25 @@
       lastEvent.value = this.dataset.lastEvent;
       form.submit();
     });
+  });
+
+  document.querySelector('.prev-period').addEventListener('click', function(event) {
+    var prevDate = new Date(startDate);
+    prevDate.setDate(startDate.getDate() - periodDays);
+    urlParams.set('start', moment(prevDate).format('YYYY-MM-DD'));
+    document.location.href = '?' + urlParams.toString();
+  });
+
+  document.querySelector('.next-period').addEventListener('click', function(event) {
+    var nextDate = new Date(startDate);
+    nextDate.setDate(startDate.getDate() + periodDays + 1);
+    urlParams.set('start', moment(nextDate).format('YYYY-MM-DD'));
+    document.location.href = '?' + urlParams.toString();
+  });
+
+  document.querySelector('select.period').addEventListener('change', function(event) {
+    urlParams.set('period', this.value);
+    document.location.href = '?' + urlParams.toString();
   });
 </script>
 {% endblock %}
