--- a/templates/home.html
+++ b/templates/home.html
@@ -149,6 +149,10 @@ select.browser-default {
           }
         }],
         yAxes: [{
+          display: true,
+          ticks: {
+            beginAtZero: true
+          },
           scaleLabel: {
             display: true,
             labelString: 'Hours'
